Intial framework set up. Added board and lighting.

--- a/index.html
+++ b/index.html
@@ -16,16 +16,27 @@
 	<script type="text/javascript" src="scripts/lib/jquery-1.10.2.min.js"></script>
 	<script type="text/javascript" src="scripts/lib/dat.gui.min.js"></script>
 
-	<script type="text/javascript" src="scripts/lib/three.min.js"></script>
+	<script type="text/javascript" src="scripts/lib/Three.js"></script>
+	<script type="text/javascript" src="scripts/lib/OrbitControls.js"></script>
+
+	<script type="text/javascript" src="scripts/lib/Detector.js"></script>
+	<script type="text/javascript" src="scripts/lib/stats.min.js"></script>
+
+	<script type="text/javascript" src="scripts/lib/loaders/OBJMTLLoader.js"></script>
+	<script type="text/javascript" src="scripts/lib/loaders/OBJLoader.js"></script>
+	<script type="text/javascript" src="scripts/lib/loaders/MTLLoader.js"></script>
 
 	<!-- Scripts -->
 	<script type="text/javascript" src="scripts/control.js"></script>
+	<script type="text/javascript" src="scripts/chessState.js"></script>
+	<script type="text/javascript" src="scripts/chessVisualizer.js"></script>
+	<script type="text/javascript" src="scripts/chessLoader.js"></script>
 
 
 </head>
 <body>
 
-	
+	<div id="chessVisualizer"></div>
 
 </body>
 </html>
