--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 	<script type="text/javascript" src="scripts/chessVisualizer.js"></script>
 	<script type="text/javascript" src="scripts/chessLoader.js"></script>
 
+	<script type="text/javascript" src="scripts/utils.js"></script>
+
 
 </head>
 <body>
