Animation framework in place. Able to make and animate basic moves.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <script type="text/javascript" src="scripts/lib/Three.js"></script>
     <script type="text/javascript" src="scripts/lib/OrbitControls.js"></script>
+    <script type="text/javascript" src="scripts/lib/tween.min.js"></script>
 
     <script type="text/javascript" src="scripts/lib/Detector.js"></script>
     <script type="text/javascript" src="scripts/lib/stats.min.js"></script>
@@ -31,14 +32,13 @@
 
     <script type="text/javascript" src="scripts/control.js"></script>
     <script type="text/javascript" src="scripts/chessState.js"></script>
-    <script type="text/javascript" src="scripts/chessVisualizer.js"></script>
+
     <script type="text/javascript" src="scripts/chessLoader.js"></script>
-
-
+    <script type="text/javascript" src="scripts/chessVisualizer.js"></script>
+    <script type="text/javascript" src="scripts/chessTweening.js"></script>
+    <script type="text/javascript" src="scripts/chessProperties.js"></script>
 </head>
 <body>
-
     <div id="chessVisualizer"></div>
-
 </body>
 </html>
