Fixed locked GUI input issue by specifying three.js canvas as the dom element for the camera controls.

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     <script type="text/javascript" src="scripts/utils.js"></script>
 
     <script type="text/javascript" src="scripts/control.js"></script>
+    <script type="text/javascript" src="scripts/controlGame.js"></script>
+
     <script type="text/javascript" src="scripts/chessState.js"></script>
 
     <script type="text/javascript" src="scripts/chessLoader.js"></script>
