Changed folder structure to be more organized. Updated jQuery and added jQuery noty plugin framework.

--- a/index.html
+++ b/index.html
@@ -5,40 +5,38 @@
     
     <title>Title</title>
     
-    <link rel="stylesheet" type="text/css" href="styles/normalize.css">
-    <link rel="stylesheet" type="text/css" href="styles/main.css">  
+    <link rel="stylesheet" type="text/css" href="vendor/normalize.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/main.css">  
 
     <!-- Favicon -->
     <!-- <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> -->
 
     <!-- Libraries -->
-    <script type="text/javascript" src="scripts/lib/jquery-1.10.2.min.js"></script>
-    <script type="text/javascript" src="scripts/lib/dat.gui.min.js"></script>
+    <script type="text/javascript" src="vendor/jquery/jquery-2.0.3.min.js"></script>
 
-    <script type="text/javascript" src="scripts/lib/Three.js"></script>
-    <script type="text/javascript" src="scripts/lib/OrbitControls.js"></script>
-    <script type="text/javascript" src="scripts/lib/tween.min.js"></script>
+    <script type="text/javascript" src="vendor/threejs/Three.js"></script>
+    <script type="text/javascript" src="vendor/threejs/OrbitControls.js"></script>
+    <script type="text/javascript" src="vendor/threejs/loaders/OBJMTLLoader.js"></script>
+    <script type="text/javascript" src="vendor/threejs/loaders/OBJLoader.js"></script>
+    <script type="text/javascript" src="vendor/threejs/loaders/MTLLoader.js"></script>
 
-    <script type="text/javascript" src="scripts/lib/Detector.js"></script>
-    <script type="text/javascript" src="scripts/lib/stats.min.js"></script>
-
-    <script type="text/javascript" src="scripts/lib/loaders/OBJMTLLoader.js"></script>
-    <script type="text/javascript" src="scripts/lib/loaders/OBJLoader.js"></script>
-    <script type="text/javascript" src="scripts/lib/loaders/MTLLoader.js"></script>
+    <script type="text/javascript" src="vendor/dat.gui.min.js"></script>
+    <script type="text/javascript" src="vendor/tween.min.js"></script>
+    <script type="text/javascript" src="vendor/stats.min.js"></script>
 
     <!-- Scripts -->
-    <script type="text/javascript" src="scripts/utils.js"></script>
+    <script type="text/javascript" src="resources/js/utils.js"></script>
 
-    <script type="text/javascript" src="scripts/control.js"></script>
-    <script type="text/javascript" src="scripts/controlGame.js"></script>
+    <script type="text/javascript" src="resources/js/control.js"></script>
+    <script type="text/javascript" src="resources/js/controlGame.js"></script>
 
-    <script type="text/javascript" src="scripts/chessState.js"></script>
+    <script type="text/javascript" src="resources/js/chessState.js"></script>
 
-    <script type="text/javascript" src="scripts/chessLoader.js"></script>
-    <script type="text/javascript" src="scripts/chessVisualizer.js"></script>
-    <script type="text/javascript" src="scripts/chessTweening.js"></script>
-    <script type="text/javascript" src="scripts/chessProperties.js"></script>
+    <script type="text/javascript" src="resources/js/chessLoader.js"></script>
+    <script type="text/javascript" src="resources/js/chessVisualizer.js"></script>
+    <script type="text/javascript" src="resources/js/chessTweening.js"></script>
+    <script type="text/javascript" src="resources/js/chessProperties.js"></script>
 </head>
 <body>
     <div id="chessVisualizer"></div>
