Changed tweening function to allow multiple queues to be active at once. Added camera controls

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 
     <script type="text/javascript" src="resources/js/chessLoader.js"></script>
     <script type="text/javascript" src="resources/js/chessVisualizer.js"></script>
+    <script type="text/javascript" src="resources/js/chessCamera.js"></script>
     <script type="text/javascript" src="resources/js/chessTweening.js"></script>
     <script type="text/javascript" src="resources/js/chessProperties.js"></script>
 </head>
