--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <script type="text/javascript" src="resources/js/chessState.js"></script>
 
     <script type="text/javascript" src="resources/js/chessLoader.js"></script>
+    <script type="text/javascript" src="resources/js/chessAppearance.js"></script>
     <script type="text/javascript" src="resources/js/chessVisualizer.js"></script>
     <script type="text/javascript" src="resources/js/chessCamera.js"></script>
     <script type="text/javascript" src="resources/js/chessTweening.js"></script>
